<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".GroupChatActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/group_chats"
                android:layout_gravity="center_horizontal"
                android:textStyle="bold"
                android:textSize="30sp"
                android:gravity="center"
                android:layout_marginBottom="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <ListView
                android:id="@+id/groupChatList"
                android:layout_marginVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="500dp"/>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>