...
    android:gravity="top"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ChatActivity">

    <ListView
        android:id="@+id/chatMessagesListView"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:layout_above="@id/messageInputLayout"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp" />

...
